{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 14,
  "lineage": "de016a83-a2af-a0fd-ddaf-630462dafc16",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shelfsense_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0989fb15ce71ba39e",
            "arn": "arn:aws:ec2:eu-north-1:288947333532:instance/i-0922b0a87929e8f40",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0922b0a87929e8f40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "shelfsense-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0110ca60a1689dcd8",
            "private_dns": "ip-10-0-1-43.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.43",
            "public_dns": "ec2-13-60-251-87.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.251.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05966cdd69e4d5020",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b81f23ac2aa5f2c",
            "tags": {
              "Name": "shelfsense-app",
              "Project": "shelfsense",
              "Role": "app"
            },
            "tags_all": {
              "Name": "shelfsense-app",
              "Project": "shelfsense",
              "Role": "app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0884d08f5d3a15552"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.shelfsense_app_sg",
            "aws_subnet.shelfsense_subnet",
            "aws_vpc.shelfsense_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shelfsense_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0989fb15ce71ba39e",
            "arn": "arn:aws:ec2:eu-north-1:288947333532:instance/i-08e37e4dc74bffa98",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e37e4dc74bffa98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "shelfsense-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-087c9e10daf67434a",
            "private_dns": "ip-10-0-1-189.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.189",
            "public_dns": "ec2-13-62-51-191.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.51.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067a470c1a7df699e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b81f23ac2aa5f2c",
            "tags": {
              "Name": "shelfsense-db",
              "Project": "shelfsense",
              "Role": "db"
            },
            "tags_all": {
              "Name": "shelfsense-db",
              "Project": "shelfsense",
              "Role": "db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05863ec8799d0ea84"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.shelfsense_db_sg",
            "aws_subnet.shelfsense_subnet",
            "aws_vpc.shelfsense_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shelfsense_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:288947333532:internet-gateway/igw-0b045e5e996a0c3e4",
            "id": "igw-0b045e5e996a0c3e4",
            "owner_id": "288947333532",
            "tags": {
              "Name": "shelfsense-igw",
              "Project": "shelfsense"
            },
            "tags_all": {
              "Name": "shelfsense-igw",
              "Project": "shelfsense"
            },
            "vpc_id": "vpc-0c254dcb98640000a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shelfsense_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shelfsense_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:288947333532:route-table/rtb-0812e8ee92914f7f0",
            "id": "rtb-0812e8ee92914f7f0",
            "owner_id": "288947333532",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b045e5e996a0c3e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shelfsense-rt",
              "Project": "shelfsense"
            },
            "tags_all": {
              "Name": "shelfsense-rt",
              "Project": "shelfsense"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c254dcb98640000a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.shelfsense_igw",
            "aws_vpc.shelfsense_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shelfsense_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0910861f42e8b9a09",
            "route_table_id": "rtb-0812e8ee92914f7f0",
            "subnet_id": "subnet-01b81f23ac2aa5f2c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.shelfsense_igw",
            "aws_route_table.shelfsense_rt",
            "aws_subnet.shelfsense_subnet",
            "aws_vpc.shelfsense_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shelfsense_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:288947333532:security-group/sg-0884d08f5d3a15552",
            "description": "App server: SSH from my IP, HTTP and port 5000 from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0884d08f5d3a15552",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask app direct access",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP public access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "176.230.26.87/32"
                ],
                "description": "SSH from admin IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "shelfsense-app-sg",
            "name_prefix": "",
            "owner_id": "288947333532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shelfsense-app-sg",
              "Project": "shelfsense"
            },
            "tags_all": {
              "Name": "shelfsense-app-sg",
              "Project": "shelfsense"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c254dcb98640000a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shelfsense_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shelfsense_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:288947333532:security-group/sg-05863ec8799d0ea84",
            "description": "DB server: SSH from my IP, PostgreSQL from app server only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05863ec8799d0ea84",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "PostgreSQL from app subnet only",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "176.230.26.87/32"
                ],
                "description": "SSH from admin IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "shelfsense-db-sg",
            "name_prefix": "",
            "owner_id": "288947333532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shelfsense-db-sg",
              "Project": "shelfsense"
            },
            "tags_all": {
              "Name": "shelfsense-db-sg",
              "Project": "shelfsense"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c254dcb98640000a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shelfsense_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shelfsense_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:288947333532:subnet/subnet-01b81f23ac2aa5f2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b81f23ac2aa5f2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "288947333532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shelfsense-subnet",
              "Project": "shelfsense"
            },
            "tags_all": {
              "Name": "shelfsense-subnet",
              "Project": "shelfsense"
            },
            "vpc_id": "vpc-0c254dcb98640000a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shelfsense_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shelfsense_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:288947333532:vpc/vpc-0c254dcb98640000a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025c38d14d094da31",
            "default_route_table_id": "rtb-0bb782e352d59942b",
            "default_security_group_id": "sg-024a4db8c259696d7",
            "dhcp_options_id": "dopt-0152517e60230af75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c254dcb98640000a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb782e352d59942b",
            "owner_id": "288947333532",
            "tags": {
              "Name": "shelfsense-vpc",
              "Project": "shelfsense"
            },
            "tags_all": {
              "Name": "shelfsense-vpc",
              "Project": "shelfsense"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}